truncate category title-mrealized that i had to truncate the title to prevent someone adding a whole chapter as a category title, now it will truncate at 40 characters and add ... if there's more

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -180,11 +180,12 @@ p {
 }
 
 .renameCategory>input {
-  height: 1rem;
+  height: 1.5rem;
   border-radius: 5px;
   border: 1px solid black;
   margin-bottom: 0.5rem;
   margin-right: 0.5rem;
+  width: 65%;
 }
 
 .createNewNote {
@@ -206,7 +207,6 @@ p {
 
 .textInput {
   height: 5rem;
-  /* width: 45rem; */
   max-width: 45.5rem;
   border-radius: 5px;
   margin-bottom: 0.5rem;
